# xwtool

./: AUTHORS.md  Makefile.am  README.md  autogen.sh  configure.ac
build-aux/: verbose.mk
citizen/: Makefile.am  citizen.cc  citizen.hh
citizenize/: Makefile.am  citizen.m4  citizenize.cc  citizenize.hh
m4/: Makefile.am  xwtool.m4
tests/: Makefile.am  arguments.at  atlocal.in  citizen.at  citizenize.at  package.m4.in  parsing.at  testsuite.at  xwtool.at  xwtoolize.at
xwtool/: Makefile.am  xwapplication.cc  xwapplication.hh  xwcontext.cc  xwcontext.hh  xwexcept.cc  xwexcept.hh  xwspec.cc  xwspec.hh  xwtool.cc  xwtool.hh  xwutil.cc  xwutil.hh
xwtoolize/: Makefile.am  xwtoolize.cc  xwtoolize.hh
